# infra_sprint1

./: .gitignore  info.txt  pyproject.toml  requirements.txt
backend/kittygram_backend/: settings.py
frontend/: package-lock.json
infra/: default  kittygram_site.txt
