[tool.poetry]
name = "infra-sprint1"
version = "0.1.0"
description = ""
authors = ["Denis <blomy@yandex.ru>"]
readme = "README.md"
packages = [{include = "infra_sprint1"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
